[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stable_diffusion_analysis"
version = "0.1.0"
description = "Analysis tools for Stable Diffusion models"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "Pillow",
    "requests",
    "transformers",
    "diffusers==0.21.2",
    "huggingface_hub<0.26.0",
    "opencv-python-headless",
    "gradio",
    "fastapi",
    "uvicorn",
    "pycocotools",
    "scikit-image",
    "scikit-learn",
    "sentencepiece",
    "einops",
    "datasets",
    "open_clip_torch",
    "jsonlines",
    "accelerate",
    "imageio",
    "imageio[ffmpeg]",
]

[project.optional-dependencies]
dev = ["black", "flake8", "pytest"]
